--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Getting random Russian names",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -12,6 +12,7 @@
   },
   "keywords": [
     "names",
+    "surnames",
     "russian"
   ],
   "author": "Vadim Konchik",
