--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
     "declaration": true,
-    "outDir": "./",
+    "sourceMap": true,
+    "declarationMap": true,
+    "outDir": "./lib",
     "strict": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
 }
+
